# webApp/routers/router.go
@@ -32,6 +32,7 @@ func InitRouter() *gin.Engine {
 		apiv1.POST("/minecraft/select", minecraft.HandleVersionSelection)
 		apiv1.GET("/minecraft/current", v1.GetCurrentVersion)
 		apiv1.GET("/server/status", v1.GetServerStatus)
+		apiv1.GET("/server/ip", v1.GetServerIP)
 	}
 	distPath := filepath.Join(".", "frontend", "dist")
 	r.StaticFS("/assets", http.Dir(filepath.Join(distPath, "assets")))
